--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tailwind-dashboard",
+  "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
@@ -7,20 +8,21 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.0",
-    "tailwindcss": "^2.2.2",
-    "vue": "^3.0.5",
-    "vue-router": "4"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.14",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8",
-    "vue-tsc": "^0.0.24"
+    "@babel/types": "^7.23.6",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/compiler-sfc": "^3.4.14",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vue-tsc": "^1.8.27"
   }
 }
